fixed player's tower handling in ResolveIsland::solveIsland